--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -105,8 +105,14 @@ color: #212121;
 }
 
 .form-lable{
+font-weight: normal;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: #757575;
 
 }
+
 
 .comment-textarea{
 padding: 12px;
@@ -116,6 +122,7 @@ height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 margin-bottom: 20px;
+
 }
 
 /*Домашнее задание 4*/
@@ -640,8 +647,9 @@ background-repeat: no-repeat;
 background-position: center;
 margin-left: auto;
 margin-right: auto;
-height: 200px;
-width: 1600px;
+height: 300px;
+padding-top: 60px;
+padding-bottom: 60px;
 
 } 
 
