--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -91,7 +91,7 @@ color: #212121;
 
 }
 .form-field{
-  display: flex;
+  position: relative;
   margin-bottom: 28px;
   flex-direction: column;
  
@@ -104,15 +104,25 @@ color: #212121;
   border-radius: 4px;
 }
 
-.form-lable{
+.form-label{
 font-weight: normal;
 font-size: 12px;
 line-height: 1.17;
 letter-spacing: 0.01em;
 color: #757575;
 
-}
+position: absolute;
+top: 30%;
+left: 42px;
+transform: translateY(-30%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+
+}
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+transform: translateY(-250%) translateX(-42px);
+}
 
 .comment-textarea{
 padding: 12px;
@@ -124,6 +134,9 @@ border-radius: 4px;
 margin-bottom: 20px;
 
 }
+
+
+
 
 /*Домашнее задание 4*/
 
