--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -86,8 +86,10 @@ font-size: 20px;
 line-height: 23px;
 text-align: center;
 letter-spacing: 0.03em;
+margin-bottom: 30px;
 
 color: #212121;
+
 
 }
 .form-field{
@@ -112,17 +114,14 @@ letter-spacing: 0.01em;
 color: #757575;
 
 position: absolute;
-top: 30%;
-left: 42px;
-transform: translateY(-30%);
+top: 50%;
+left: 30px;
+transform: translateY(-50%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
-.form-input:focus + .form-label,
-.form-input:not(:placeholder-shown) + .form-label {
-transform: translateY(-250%) translateX(-42px);
-}
+
 
 .comment-textarea{
 padding: 12px;
@@ -135,8 +134,10 @@ margin-bottom: 20px;
 
 }
 
-
-
+.form-input:focus + .form-label{
+  color: #2196f3;
+  transform: translateY(-50%);
+}
 
 /*Домашнее задание 4*/
 
