--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -888,3 +888,20 @@ position: relative;
 .link-items:not(:last-child) {
     margin-right: 10px;
   }
+
+  /*модальное окно*/
+  .label-footer {
+    display: flex;
+
+  }
+  .input-footer{
+  
+  box-sizing: border-box;
+  width: 358px;
+  height: 50px;
+  padding: 12px 0px 12px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
