--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -24,16 +24,9 @@ left: 50%;
 transform: translate(-50%, -50%);
 background: #FFFFFF;
 border-radius: 4px;
-
-/*left: 536px;
-top: 221px;*/
-
-/*
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
- 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);*/
-
-
 }
+
+
 .modal-close {
   display: block;
   width: 11px;
@@ -42,7 +35,7 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
   margin-right: auto;
 }
 
-.modal button {
+.btn-close {
   position: absolute;
   display: block;
 /*width: 30px;
@@ -120,6 +113,16 @@ transform: translateY(-50%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
+}
+.icon-modal{
+  position: absolute;
+  top: 50%;
+  left: 10px;
+
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  transform: translateY(-50%);
 }
 
 
