--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -142,6 +142,27 @@ margin-bottom: 20px;
   transform: translateY(-50%);
 }
 
+.btn-modal{
+font-weight: bold;
+font-size: 16px;
+line-height: 1.87;
+
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
+color: #FFFFFF;
+
+position: absolute;
+left: 50%;
+transform: translateX(-50%);
+margin-bottom: 40px;
+width: 200px;
+height: 50px;
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+border: transparent;
+}
 /*Домашнее задание 4*/
 
 
