--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -38,10 +38,6 @@ border-radius: 4px;
 .btn-close {
   position: absolute;
   display: block;
-/*width: 30px;
-  height: 30px;
-  left: 1026px;
-  top: 229px;*/
 	width: 30px;
   height: 30px;
   top: 8px;
@@ -88,13 +84,13 @@ color: #212121;
 .form-field{
   position: relative;
   margin-bottom: 28px;
-  flex-direction: column;
  
 }
 .form-input{
  
   width: 448px;
   height: 40px;
+  padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
 }
@@ -108,7 +104,7 @@ color: #757575;
 
 position: absolute;
 top: 50%;
-left: 30px;
+left: 40px;
 transform: translateY(-50%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -137,10 +133,13 @@ margin-bottom: 20px;
 
 }
 
-.form-input:focus + .form-label{
-  color: #2196f3;
-  transform: translateY(-50%);
-}
+
+.form-input:focus + .form-label {
+ color: #2196F3;
+ }
+
+
+
 
 .btn-modal{
 font-weight: bold;
@@ -163,6 +162,10 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 border: transparent;
 }
+
+
+
+
 /*Домашнее задание 4*/
 
 
