--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -82,8 +82,18 @@ color: #212121;
 
 }
 .form-field{
+font-weight: normal;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.01em;
+color: #757575;
+
+
+
   position: relative;
-  margin-bottom: 28px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
  
 }
 .form-input{
@@ -96,16 +106,8 @@ color: #212121;
 }
 
 .form-label{
-font-weight: normal;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.01em;
-color: #757575;
+  margin-bottom: 4px;
 
-position: absolute;
-top: 50%;
-left: 40px;
-transform: translateY(-50%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
@@ -113,12 +115,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .icon-modal{
   position: absolute;
   top: 50%;
-  left: 10px;
-
+  left: 15px;
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  transform: translateY(-50%);
 }
 
 
@@ -132,6 +130,7 @@ border-radius: 4px;
 margin-bottom: 20px;
 
 }
+
 
 
 .form-input:focus + .form-label {
@@ -155,6 +154,7 @@ position: absolute;
 left: 50%;
 transform: translateX(-50%);
 margin-bottom: 40px;
+margin-top: 30px;
 width: 200px;
 height: 50px;
 background: #2196F3;
