--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -778,6 +778,8 @@ padding: 10px 32px;
  .button:hover {background:var(--accent-bg-color);
 color: var(--features-bg-color);
  }
+ 
+
 
 /*<!--Флекс оформление-->
  <!--Особенности-->*/
@@ -938,6 +940,8 @@ position: relative;
   /*модальное окно*/
   .label-footer {
     display: flex;
+    
+  
 
   }
   .input-footer{
@@ -950,4 +954,11 @@ position: relative;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+   
+
+  }
+  .footer button{
+    display: flex;
+    justify-content: center;
+    border: none;
+  }
