--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -135,14 +135,10 @@ height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 margin-bottom: 20px;
-
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-
-.form-label:focus + .form-input {
- color: #2196F3;
- }
 
 .form-field input:focus,
 .form-field input:hover,
@@ -150,10 +146,12 @@ margin-bottom: 20px;
 .form-field textarea:hover {
   outline-color: #2196F3;
   color: #2196F3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field input:focus ~ .icon-modal{
  fill: #2196F3;
+ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .btn-modal{
@@ -177,6 +175,7 @@ background: #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 border: transparent;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -957,8 +956,9 @@ position: relative;
    
 
   }
-  .footer button{
+  .footer-block button{
     display: flex;
     justify-content: center;
     border: none;
   }
+  
