--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -53,6 +53,7 @@ border-radius: 4px;
 .btn-close:focus {
   outline: 0;
   box-shadow: 0 0 1pt 1pt var(--accent-color);
+  fill: #2196F3;
 }
 
 .active-link::after {
@@ -953,12 +954,14 @@ position: relative;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 12px;
    
 
   }
-  .footer-block button{
+  .button-form{
     display: flex;
     justify-content: center;
     border: none;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
