--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -504,14 +504,41 @@ color: var(--part-txt-color);
 }
 
 .button {
- font-size: 16px;
-line-height: 1.87;
-display: flex;
-align-items: center;
-text-align: center;
-letter-spacing: 0.06em;
-color: var(--part-txt-color);
-background:var(--accent-bg-color);
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  display: inline-block;
+  letter-spacing: 0.06em;
+  color: var(--part-txt-color);
+  background: var(--accent-bg-color);
+  width: 200px;
+  height: 50px;
+  border: transparent;
+  border-radius: 4px;
+  padding: 10px 32px;
+
 }
-.button:focus,
-.button:hover
+
+
+.input-footer{
+  
+  box-sizing: border-box;
+  width: 358px;
+  height: 50px;
+  padding: 12px 0px 12px 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 12px;
+   
+
+  }
+  .button-form{
+    display: flex;
+    justify-content: center;
+    border: none;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
