--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -96,8 +96,6 @@ line-height: 1.17;
 letter-spacing: 0.01em;
 color: #757575;
 
-
-
   position: relative;
   display: flex;
   flex-direction: column;
@@ -153,6 +151,23 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .form-field input:focus ~ .icon-modal{
  fill: #2196F3;
  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+/*.checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}*/
+
+.modal-form .checkbox-label {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575; 
+  text-transform: none;
 }
 
 .btn-modal{
