--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -155,11 +155,11 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-/*.checkbox {
+.checkbox {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}*/
+}
 
 .modal-form .checkbox-label {
   font-weight: 400;
@@ -168,7 +168,23 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   letter-spacing: 0.03em;
   color: #757575; 
   text-transform: none;
+  display: flex;
+  align-items: center;
+  padding-left: 13px;
+  margin-bottom: 30px;
 }
+.checkbox {
+  position: absolute;
+  padding: 0 ;
+  border: 0;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  }
+
+
+
+  
 
 .btn-modal{
 font-weight: bold;
