--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -181,10 +181,31 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 1px;
   overflow: hidden;
   }
+.checkbox-label{
+font-weight: normal;
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+    color: #757575;
+}
+    
+.checkbox-icon {
+ display: inline-block;
+ width: 16px;
+ height: 15px;
+ margin-right: 7px;
+    
+border: 1px solid #757575;
+border-radius: 2px;
+}
+    
+.checkbox:checked + .checkbox-icon {
+border-color: transparent;
+background-color: #2196f3;
+background-origin: border-box;
+background-size: contain;
+}
 
-
-
-  
 
 .btn-modal{
 font-weight: bold;
