--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -155,19 +155,14 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
-.checkbox {
+/*.checkbox {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-}
+}*/
 
 .modal-form .checkbox-label {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575; 
-  text-transform: none;
+  
   display: flex;
   align-items: center;
   padding-left: 13px;
@@ -186,7 +181,9 @@ font-weight: normal;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
-    color: #757575;
+color: #757575;
+
+
 }
     
 .checkbox-icon {
