--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -133,7 +133,7 @@ width: 448px;
 height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
-margin-bottom: 20px;
+/*margin-bottom: 20px;*/
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
