--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -18,7 +18,6 @@
 position: absolute;
 
 width: 528px;
-height: 581px;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
@@ -99,7 +98,7 @@ color: #757575;
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 28px;
  
 }
 .form-input{
@@ -213,10 +212,10 @@ text-align: center;
 letter-spacing: 0.06em;
 color: #FFFFFF;
 
-position: absolute;
-left: 50%;
-transform: translateX(-50%);
-margin-bottom: 40px;
+display: block;
+margin-right: auto;
+margin-left: auto;
+
 margin-top: 30px;
 width: 200px;
 height: 50px;
