--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -371,6 +371,10 @@ text-align: center;
 letter-spacing: 0.03em;
 border: 1px solid transparent;
 border-radius: 4px;
+padding-top: 6px;
+    padding-right: 22px;
+    padding-bottom: 6px;
+    padding-left: 22px;
 }
 
 
