--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -711,6 +711,7 @@ line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
 text-decoration: none;
+padding-top: 30px;
 
  }
 
@@ -876,7 +877,7 @@ position: relative;
 
 .our-team li{
   background: var(--main-bg-color);
-  padding-bottom: 36px;
+
 }
 
 .our-team{
@@ -893,7 +894,8 @@ position: relative;
 
 .our-items{
  width: calc((100% - 30px * 3) / 4);
-  margin-right: 30px;}
+  margin-right: 30px;
+}
 
 .our-items:nth-child(4n+0) {
   margin-right: 0;
@@ -905,6 +907,7 @@ position: relative;
   /*padding-left: 0;*/
   justify-items: center;
   align-items: center;
+  padding-bottom: 30px;
 }
 
   <!--Постоянные клиенты-->
