--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -659,6 +659,8 @@ line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 text-decoration: none;
+margin-bottom: 10px;
+
 }
 .heading-item {
 font-style: normal;
@@ -686,14 +688,16 @@ margin: 0px;
 
 
 .text { 
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-/*line-height: 1.71px;*/
-letter-spacing: 0.03em;
-color: var(--sec-txt-color);
-margin-bottom: 0; margin: 0;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: var(--sec-txt-color);
+
 }
+
 
 .section {
 list-style:none;
