--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -178,6 +178,7 @@ h3 {
 }
    
 .section {
+  margin-bottom: 94px;
   /*padding: 94px 0;
   background-color: rgb(195, 226, 187); */
 }
@@ -208,11 +209,12 @@ h3 {
   display: block;
  margin-right: 30px;
   width: calc((100% - 60px) / 3); 
- /* width: 370px;
-   margin-right: 30px; 
-  /*margin-bottom: 30px;*/
+}
+  .container-li:nth-last-child(-n + 3) {
+    margin-bottom: 0;  
    
 }
+
 .container-li:nth-child(3n+0) {
   margin-right: 0;
 }
