--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -114,9 +114,6 @@ h3 {
   width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
-  border-bottom: 1px solid#ECECEC;
-
-  /*outline: 2px solid #2196f3;*/
   
 }
 .nav {
@@ -291,7 +288,8 @@ body {
   color: var(--part-txt-color);
   margin-bottom: 0px;
 margin-top: 0px;
-;
+border-top: 1px solid#ECECEC;
+
 }
 .logo{
 font-family: "Raleway", sans-serif;
