--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -47,10 +47,17 @@ padding-top: 20px;
 .container-li {
 margin-bottom: 30px;
 border: 1px solid #EEEEEE;
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16)
+
+}
+.container-li:hover{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16)
 }
 
-
+.container-li:focus{
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16)
+}
 .img {
   display: block;
   max-width: 100%;
