--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -108,12 +108,14 @@ color: #757575;
   padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-label{
   margin-bottom: 4px;
-
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
@@ -122,6 +124,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   top: 50%;
   left: 15px;
   display: inline-block;
+  color: #212121;
 }
 
 
@@ -133,7 +136,8 @@ height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 /*margin-bottom: 20px;*/
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -144,7 +148,8 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .form-field textarea:hover {
   outline-color: #2196F3;
   color: #2196F3;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field input:focus ~ .icon-modal{
