--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -108,15 +108,10 @@ color: #757575;
   padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-label{
   margin-bottom: 4px;
-  transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 
 }
 .icon-modal{
@@ -136,8 +131,7 @@ height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 /*margin-bottom: 20px;*/
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -148,15 +142,21 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 .form-field textarea:hover {
   outline-color: #2196F3;
   color: #2196F3;
-  transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .form-field input:focus ~ .icon-modal{
  fill: #2196F3;
- transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+ transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+ .form-field textarea{
+
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+ }
 
 
 /*.checkbox {
@@ -224,7 +224,7 @@ margin-left: auto;
 margin-top: 30px;
 width: 200px;
 height: 50px;
-background: #2196F3;
+background: #188CE8;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 border: transparent;
