--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -239,14 +239,12 @@ h3 {
   }
 
 .address {
-  margin-top: 20px;
-  list-style: none;
+    list-style: none;
 }
 
 .address .contacts {
   color: var(--part-txt-color);
   list-style: none;
-  margin-top: 9px;
   padding: 0;
 }
 .block-padding{
@@ -371,7 +369,8 @@ color: var(--sec-txt-color);
   }
 .btn:hover,
  .btn:focus{background:var(--accent-bg-color);
-color: var(--features-bg-color);}
+color: var(--features-bg-color);
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);}
 
 
   .btn{
