--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -500,6 +500,7 @@ color:var(--part-txt-color);
     list-style: none;
   font-style: normal;
   color: rgba(255, 255, 255, 0.6);
+  margin-top: 9px;
 }
 
 .heder-social{
