--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -502,6 +502,7 @@ color:var(--part-txt-color);
     list-style: none;
   font-style: normal;
   color: rgba(255, 255, 255, 0.6);
+  margin-top: 9px;
   /*margin-top: 9px;*/
 }
 
