--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -49,10 +49,14 @@ border-radius: 4px;
   
 }
 
-.btn-close:focus {
+.btn-close:focus,
+.btn-close:hover{
   outline: 0;
   box-shadow: 0 0 1pt 1pt var(--accent-color);
   fill: #2196F3;
+  outline-color: #2196F3;
+  color: #2196F3;
+  cursor: pointer;
 }
 
 .active-link::after {
@@ -108,6 +112,7 @@ color: #757575;
   padding-left: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-label{
@@ -142,8 +147,10 @@ border-radius: 4px;
 .form-field textarea:hover {
   outline-color: #2196F3;
   color: #2196F3;
+  cursor: pointer;
 
 }
+
 
 .form-field input:focus ~ .icon-modal{
  fill: #2196F3;
@@ -229,6 +236,9 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 border: transparent;
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-modal:hover {
+	cursor: pointer;
 }
 
 
