--- a/css/webstyles.css
+++ b/css/webstyles.css
@@ -347,8 +347,10 @@ position: relative;
   display: flex;
   padding: 0;
   margin: 0;
-  margin-bottom: 94px;
- 
+   
+  }
+  .what-we-do{
+    padding-bottom: 94px;
   }
   
 .what li {
