--- a/css/portfoliostyles.css
+++ b/css/portfoliostyles.css
@@ -432,6 +432,9 @@ color: var(--part-txt-color);
   display: block;
   overflow: hidden;
 }
+.portfolio-link img{
+  display: block;
+}
 
 .port-text {
   position: absolute;
